tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-expression-index-no-similar/expected.err
Error: invalid index on symbolic subscript array 'foo'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-expression-index-no-similar/input.k65:7:12 ]
   │
 7 │     lda foo[buffer]
   │            ────┬───  
   │                ╰───── here
   │ 
   │ Help: use '.field' or '[.field]' for named field access
───╯
